--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,13 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.5
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.3.6
   go_router: ^10.0.0
+  google_fonts: ^5.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
