--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.6
+  flutter_vector_icons: ^2.0.0
   go_router: ^10.0.0
   google_fonts: ^5.1.0
   provider: ^6.0.5
